--- a/deployment/frontend-deployment.yaml
+++ b/deployment/frontend-deployment.yaml
@@ -16,16 +16,16 @@ spec:
         api: external
     spec:
       containers:
-        - image: nhuanlh/udagram-frontend:v4
+        - image: khanhnd33/udagram-frontend:v1
           name: frontend
           imagePullPolicy: Always
           resources:
             requests:
-              memory: "128Mi"
-              cpu: "250m"
+              memory: '128Mi'
+              cpu: '250m'
             limits:
-              memory: "2048Mi"
-              cpu: "500m"
+              memory: '2048Mi'
+              cpu: '500m'
           ports:
             - containerPort: 80
       restartPolicy: Always
