--- a/deployment/reverseproxy-deployment.yaml
+++ b/deployment/reverseproxy-deployment.yaml
@@ -15,16 +15,16 @@ spec:
         app: reverseproxy
     spec:
       containers:
-      - image: nhuanlh/udagram-reverseproxy:v1
-        name: reverseproxy
-        imagePullPolicy: Always
-        resources:
+        - image: khanhnd33/udagram-reverseproxy:v1
+          name: reverseproxy
+          imagePullPolicy: Always
+          resources:
             requests:
-              memory: "428Mi"
-              cpu: "250m"
+              memory: '428Mi'
+              cpu: '250m'
             limits:
-              memory: "4048Mi"
-              cpu: "500m"
-        ports:
-        - containerPort: 8080
+              memory: '4048Mi'
+              cpu: '500m'
+          ports:
+            - containerPort: 8080
       restartPolicy: Always
